Fixed some error message spillover

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -121,7 +121,7 @@ footer {
 
 .error {
   font-size: 1.5rem;
-  padding: .5rem;
+
   margin-top: 0;
   background-color: #aa0000;
   color: var(--color-1);
